--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "13.5.11",
+    "next-themes": "^0.4.6",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.11"
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/node": "24.5.2",
+    "@types/react": "19.1.13",
     "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3",
     "eslint": "^8",
-    "eslint-config-next": "13.5.11"
+    "eslint-config-next": "13.5.11",
+    "postcss": "^8",
+    "tailwindcss": "^3"
   }
 }
